# demoscene-legacy

./: README.md  asmshade.asm  blurline.asm  bumpmap.asm  cells.asm  cusfont.asm  cusfont.inc  data.asm  data.inc  explode.asm  fixed3d.asm  flag3d.asm  flat3.asm  flat3.inc  grd3.asm  grd3.inc  lamp.asm  makefile  math3d.asm  math3d.inc  matrix.asm  morph3d.asm  movback.asm  plasma.asm  rotxor.asm  rtplasma.asm  sinexpl.asm  sinxor.asm  sys.asm  sys.inc  tex3.asm  tex3.inc  wireblur.asm  xfire.asm  xstars.asm
3dflag/: 3dmath.asm  _make.bat  file_id.diz  font.asm
3dfontz/: !.bat  3dfontz.inc  graph.asm  grd_tri.asm  itoa.asm  mktex.asm  phongpal.inc  sintex.asm
anding/: anding.asm
asmshade/: ASMSHADE.COM  _make.bat  asmshade.inc  file_id.diz  font.asm  grd3.asm  mem.asm  palette.inc  tex3.asm  torus.inc
bline/: b_line.asm
br/: autoexec.cfg
bum/: bum.asm
bump/: bump.asm
bump3d/: _make.bat  alloc.asm  bump3d.asm  bump_tri.asm  engine.asm  file_id.diz  font.asm  palette.inc  random.asm
c/flatgrd2/: 3dmath.c  CMakeLists.txt  bumpmap.h  common.h  dump_scr.h  envmap.c  envmap.h  font.c  font.h  main.c  triangle.c
c/flatgrd2/build.me/: Makefile
c/flatgrd2/source/: 3dmath.c  3dmath.h  3dobj.c  3dobj.h  Makefile  bump_tri.c  bump_tri.h  bumpmap.c  dump_scr.c  envmap.c  flat_tri.c  flat_tri.h  flatgrd2.c  flatgrd2.h  font.c  graph.c  graph.h  grd_tri.c  grd_tri.h  main.c  phongpal.c  phongpal.h  tex_tri.c  tex_tri.h  triangle.h
cells/: cells.asm  filez.asm
chemol/: chemol.asm  font.inc  make.bat
filled/: filled.asm  fillpol.asm
flatgrd2/: !runme.bat  (+4 more)
(+327 files in other folders)
